--- a/css/parallax.css
+++ b/css/parallax.css
@@ -1,6 +1,6 @@
 .home__parallax {
-   background-image: url("../images/hostelskeusluge.jpg");
-   background-position: center;
+   background-image: url("../images/backgrounds/hostelskeusluge.jpg");
+   background-attachment: fixed;
    height: 100vh;
    background-size: cover;
 }
