--- a/css/parallax.css
+++ b/css/parallax.css
@@ -1,7 +1,7 @@
 .home__parallax {
    background-image: url("../images/backgrounds/NS.jpg");
    background-attachment: fixed;
-   height: 96vh;
+   height: 100vh;
    background-size: cover;
 }
 
@@ -14,16 +14,43 @@
 }
 
 .home__parallax--h1 {
-   font-size: 2em;
+   font-size: 4em;
    font-weight: 700;
-   color: blue;
-   border: 2px solid red;
+   color: #fff;
+   text-align: center;
+   margin-bottom: 25px;
+}
+
+.parallax__h1--color {
+   color: #f79421;
+}
+
+.test {
+   border-bottom: 5px solid #f79421;
 }
 
 .home__btn {
    width: 20%;
    margin: 20px auto !important;
+   display: flex;
+   justify-content: space-around;
+}
+
+.home__btn--a {
    display: block;
-   border: 5px solid lightgreen;
+   width: 80%;
+   background: rgba(0, 0, 0, 0.6);
+   color: #fff;
    text-align: center;
+   padding: 15px 0;
+   text-decoration: none;
+   border-radius: 25px;
+   font-size: 1.30em;
+   font-weight: 700;
+}
+
+.home__btn--a:hover {
+   background: rgba(247, 148, 33, 0.6);
+   color: #272361;
+   transition: 200ms ease-out;
 }
