--- a/css/footer.css
+++ b/css/footer.css
@@ -21,7 +21,7 @@ i, .icon {
    display:flex;
    flex-direction: row;
    justify-content: flex-start;
-
+   padding-top: 50px;
 }
 
 .footer__contacts{
@@ -35,5 +35,4 @@ i, .icon {
   width: 80%;
   max-width: 600px;
   margin:0 auto;
-
 }
