--- a/css/parallax.css
+++ b/css/parallax.css
@@ -57,3 +57,8 @@
    color: #272361;
    transition: 200ms ease-out;
 }
+
+.home__parallax--overlay {
+   background: linear-gradient(rgba(0,0,0, .5), rgba(0,0,0,.5));
+   height: 100%;
+}
