--- a/css/parallax.css
+++ b/css/parallax.css
@@ -22,6 +22,7 @@
    color: #fff;
    text-align: center;
    margin-bottom: 25px;
+   text-shadow: 0 0 20px #794515,0 0 30px #794515;
 }
 
 .parallax__h1--color {
