--- a/css/section_ehm.css
+++ b/css/section_ehm.css
@@ -10,7 +10,7 @@
 .box {
    width: 15%;
    height: 250px;
-   background-color: #fff;
+   background: rgba(255, 255, 255, 0.7);
    border-radius: 25px;
    margin-top: 50px;
    box-shadow: 0 0 12px 0 #000;
