--- a/css/section_ehm.css
+++ b/css/section_ehm.css
@@ -15,3 +15,31 @@
    margin-top: 50px;
    box-shadow: 0 0 12px 0 #000;
 }
+
+
+.marko_proba {
+   background-color: grey;
+   padding: 50px 0;
+   overflow: hidden;
+}
+
+.left {
+   width: 48%;
+   float: left;
+   background-color: lightblue;
+   height: 400px;
+   margin-right: 10px;
+   margin-left: 10px;
+}
+
+.come-in {
+  transform: translateY(150px);
+  animation: come-in 0.8s ease forwards;
+}
+.come-in:nth-child(odd) {
+  animation-duration: 0.6s; /* So they look staggered */
+}
+
+@keyframes come-in {
+  to { transform: translateY(0); }
+}
